@@ -1,8 +1,9 @@
-@comment $NetBSD: PLIST,v 1.3 2006/04/17 07:07:14 jlam Exp $
+@comment $NetBSD: PLIST,v 1.4 2011/02/18 23:56:48 shattered Exp $
 bin/abook
 man/man1/abook.1
 man/man5/abookrc.5
 share/locale/de/LC_MESSAGES/abook.mo
 share/locale/fr/LC_MESSAGES/abook.mo
+share/locale/it/LC_MESSAGES/abook.mo
 share/locale/ja/LC_MESSAGES/abook.mo
 share/locale/sv/LC_MESSAGES/abook.mo
